--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ pruebas-generacion
 venvs
 reconocimiento/eigenfaces/Python-Eigenfaces-master
 documentacion/definicion-proyecto.md
+reconocimiento
+nvidia-docker
