--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ reconocimiento/eigenfaces/Python-Eigenfaces-master
 documentacion/definicion-proyecto.md
 reconocimiento
 nvidia-docker
+code/morphing2
