--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,5 @@ project
 code/morphing/__pycache__
 code/morphing/faceops.py
 code/detect-diff/__pycache__
-code/detect-diff/*.csv
 code/detect-diff/faceops.py
+code/detect-diff/wrapper.sh
