--- a/code/detect-morph/Dockerfile
+++ b/code/detect-morph/Dockerfile
@@ -15,3 +15,9 @@ RUN pip install -q \
   albumentations \
   torchvision \
   python-dotenv 
+
+RUN git clone https://github.com/meilfang/SPL-MAD
+
+# official pre-trained weights mentioned in the repo's readme. Gdrive isnt friendly to wget or curl with large files (security)
+RUN pip install gdown
+RUN gdown https://drive.google.com/uc?id=1kFLp1dWp_sBwC-l-RTVo-LRitKSYxbyv&export=download; wait
