--- a/code/dreambooth/Dockerfile
+++ b/code/dreambooth/Dockerfile
@@ -20,4 +20,11 @@ RUN pip install -q \
   opencv-python \
   rembg
 
-#face_recognition
+# face_recognition
+
+RUN mkdir /diffusers
+# train_dreambooth from hugging face is updated beyond my code, resort to previous
+# RUN wget -q https://github.com/huggingface/diffusers/blob/main/examples/dreambooth/train_dreambooth.py -O /diffusers/train_dreambooth.py
+RUN wget -q https://github.com/ShivamShrirao/diffusers/raw/main/examples/dreambooth/train_dreambooth.py -O /diffusers/train_dreambooth.py
+
+RUN wget -q https://github.com/ShivamShrirao/diffusers/raw/main/scripts/convert_diffusers_to_original_stable_diffusion.py -O /diffusers/convert_diffusers_to_original_stable_diffusion.py
