--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -92,6 +92,7 @@ services:
     volumes:
       - *shared
       - ./code/detect-morph:/detect-morph
+      - ./experiments/:/experiments/
     working_dir: /SPL-MAD
     
   arcfaces:
